# circuitbrew

./: .gitignore  404.html  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  TODO.rst  cb_netlist.py  first_setup.zsh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.py  tox.ini
api/: index.html
api/api_compound_ports/: index.html
api/api_elements/: index.html
api/api_fets/: index.html
api/api_gates/: index.html
api/api_module/: index.html
api/api_ports/: index.html
api/api_qdi/: index.html
authors/: index.html
changes/: index.html
circuitbrew/: __init__.py  cb_netlist.py  circuitbrew.py  compound_ports.py  elements.py  fets.py  gates.py  globals.py  helpers.py  measure.py  module.py  ports.py  qdi.py  stack.py  symbols.py  walker.py
circuitbrew/examples/: and.py  buf.py  buf_wchb.py  buf_wchb_chain.py  inv.py  inv_simple.py  parametrized.py  prs.py  simple.py  simple2.py  simple3.py  simple4.py  test.py
circuitbrew/tech/: hspice_bucket.va  hspice_bucket_1of2.va  hspice_bucket_1of2_old.va  hspice_clk.va  hspice_src.va  hspice_src_1of2.va
contributing/: index.html
docs/: Makefile  api.md  api.rst  authors.md  changes.md  conf.py  contributing.md  index.md  index.rst  technical.rst  usage.md
docs/api/: api_compound_ports.md  api_elements.md  api_fets.md  api_gates.md  api_module.md  api_ports.md  api_qdi.md
docs/usage/: generating.md  (+4 more)
env/: pyvenv.cfg
readme/: index.html
search/: search_index.json
test/: test_circuitbrew.py
usage/: index.html
(+30 files in other folders)
