[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "circuitbrew"
dynamic = ["version", "dependencies"]
authors = [
  { name="Virantha Ekanayake", email="virantha@gmail.com" },
]
description = "Build SPICE circuits and simulation environments using Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = [
    "circuits",
    "spice",
]

[project.urls]
"Homepage" = "https://virantha.github.io/circuitbrew"
"Repository" = "https://github.com/virantha/circuitbrew"
"Bug Tracker" = "https://github.com/virantha/circuitbrew/issues"

[tool.hatch.version]
path = "circuitbrew/version.py"
 
[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.sdist]
exclude=[
    "/skywater-pdk-*"
]

[project.scripts]
cb_netlist = "circuitbrew.cb_netlist:main"